More findbugs corrections